# octo_flex_view

./: CMakeLists.txt  README.md  README_zh.md  build.sh  package.sh
cmake/: FindOctoFlexView.cmake  OctoFlexViewConfig.cmake.in  cmake_uninstall.cmake.in  octo_flex_view-config.cmake.in
examples/dynamic_bar_chart/: CMakeLists.txt  main.cpp
examples/embedded_viewer/: CMakeLists.txt  README.md  embedded_viewer.cpp
examples/simple_viewer/: CMakeLists.txt  simple_viewer.cpp
include/: builtin_textures.h  object_builder.h  octo_flex_export.h  octo_flex_viewer.h  recording_options.h  texture_image.h
src/: builtin_logo_data.h  builtin_textures.cpp  camera.cpp  camera.h  coordinate_system.cpp  coordinate_system.h  def.cpp  def.h  info_panel.cpp  info_panel.h  layer.cpp  layer.h  object.cpp  object.h  object_builder.cpp  object_manager.cpp  object_manager.h  object_tree_dialog.cpp  object_tree_dialog.h  octo_flex_view.cpp  octo_flex_view.h  octo_flex_view_container.cpp  octo_flex_view_container.h  octo_flex_viewer.cpp  recording_thread.cpp  recording_thread.h  shape.cpp  shape.h  texture_manager.cpp  texture_manager.h  textured_quad.cpp  textured_quad.h  utils.cpp  utils.h  video_recorder.cpp  video_recorder.h
